fix(REparo checkstatustoken): reapso fallos
