# routers/api/auth.go
@@ -1,6 +1,7 @@
 package api
 
 import (
+	"fmt"
 	"net/http"
 	"strconv"
 	"strings"
@@ -14,6 +15,7 @@ import (
 	"github.com/CastroEduardo/golang-api-rest/pkg/setting"
 	"github.com/CastroEduardo/golang-api-rest/pkg/util"
 
+	"github.com/CastroEduardo/golang-api-rest/service/mongo_service/dbDevicesSys_service"
 	"github.com/CastroEduardo/golang-api-rest/service/mongo_service/dblogs_service"
 	"github.com/CastroEduardo/golang-api-rest/service/mongo_service/dbsession_user_service"
 	"github.com/CastroEduardo/golang-api-rest/service/mongo_service/dbusers_service"
@@ -26,6 +28,12 @@ type auth struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
 	Remember bool   `json:"remember" valid:"Required;"`
+	From     string `json:"from"`
+}
+
+type deviceId struct {
+	IdDevice string `json:"idDevice"`
+	Type     string `json:"type"`
 }
 
 type sendModel struct {
@@ -66,6 +74,7 @@ func PostAuth(c *gin.Context) {
 	password := user.Password //c.Query("password") //c.PostForm("password")
 	//strTo, _ := strconv.ParseBool(c.PostForm("remember"))
 	remember := user.Remember //strTo
+	fromLogin := user.From
 
 	modelUser := auth{Username: username, Password: password, Remember: remember}
 	ok, _ := valid.Valid(&modelUser)
@@ -83,13 +92,13 @@ func PostAuth(c *gin.Context) {
 	}
 
 	if checkUser.NickName != "" {
-		result := saveSessionUser(remember, checkUser)
+		result := saveSessionUser(remember, checkUser, fromLogin)
 		//fmt.Println(result)
 		appG.Response(http.StatusOK, e.SUCCESS, result)
 		return
 	}
 
-	userFailured(appG, username)
+	userFailured(appG, username, fromLogin)
 
 }
 
@@ -112,7 +121,9 @@ func GetAuth(c *gin.Context) {
 
 	username := c.Query("username") //c.PostForm("username")
 	password := c.Query("password") //c.PostForm("password")
+	fromLogin := c.Query("from")
 	strTo, _ := strconv.ParseBool(c.Query("remember"))
+
 	remember := strTo
 
 	modelUser := auth{Username: username, Password: password, Remember: remember}
@@ -132,21 +143,19 @@ func GetAuth(c *gin.Context) {
 
 	if checkUser.NickName != "" {
 
-		result := saveSessionUser(remember, checkUser)
+		result := saveSessionUser(remember, checkUser, fromLogin)
 		appG.Response(http.StatusOK, e.SUCCESS, result)
 		return
 
 	}
 
-	userFailured(appG, username)
+	userFailured(appG, username, fromLogin)
 
 }
 
-func userFailured(appG app.Gin, username string) {
+func userFailured(appG app.Gin, username string, fromLogin string) {
 
-	dblogs_service.Add(1, "", "", "")
-
-	dblogs_service.Add(conf.LOGIN_FAILE, "TRY login FAILED FROM USER "+username, "", ipRequest)
+	dblogs_service.Add(conf.LOGIN_FAILE, "TRY login FAILED FROM USER "+username+" ( From : "+fromLogin+" )", "", ipRequest)
 
 	returnModel := sendModel{}
 	returnModel.Success = false
@@ -157,7 +166,7 @@ func userFailured(appG app.Gin, username string) {
 	appG.Response(http.StatusOK, e.SUCCESS, returnModel)
 }
 
-func saveSessionUser(remember bool, user authinterfaces.User_sys) sendModel {
+func saveSessionUser(remember bool, user authinterfaces.User_sys, fromLogin string) sendModel {
 
 	var returnModel sendModel
 
@@ -165,13 +174,11 @@ func saveSessionUser(remember bool, user authinterfaces.User_sys) sendModel {
 		returnModel.Success = false
 		returnModel.Token = ""
 		returnModel.Msg = conf.UserDisabled
-
-		dblogs_service.Add(conf.LOGIN_FAILE, "USER TRY LOGIN AND USER DISABLED "+user.NickName, "", ipRequest)
-
+		dblogs_service.Add(conf.LOGIN_FAILE, "USER TRY LOGIN AND USER DISABLED "+user.NickName+" ( From : "+fromLogin+" )", "", ipRequest)
 		return returnModel
 	}
 
-	tokenGet, err := util.GenerateToken("keep_trying _thief.", "keep_trying _thief.", remember)
+	tokenGet, err := util.GenerateToken("keep_trying _thief.", "keep_trying _thief.", remember, fromLogin)
 	if err != nil {
 		returnModel.Success = false
 		returnModel.Token = ""
@@ -184,6 +191,11 @@ func saveSessionUser(remember bool, user authinterfaces.User_sys) sendModel {
 		timeLoggout = time.Now().Local().Add(time.Hour * time.Duration(setting.AppSetting.TimePersistToken))
 	} else {
 		timeLoggout = time.Now().Local().Add(time.Minute * time.Duration(setting.AppSetting.TimeNotPersistToken))
+		if fromLogin == "PHONE_MOVIL" {
+			timeLoggout = time.Now().Local().Add(time.Minute * time.Duration(setting.AppSetting.TimeNotPersistToken*100))
+
+		}
+
 	}
 
 	//add session //generate session User
@@ -199,9 +211,7 @@ func saveSessionUser(remember bool, user authinterfaces.User_sys) sendModel {
 	}
 
 	dbsession_user_service.Add(newSession)
-
-	dblogs_service.Add(conf.LOGIN_SUCCESS, "USER LOGIN SUCCESS.. "+user.NickName, "", ipRequest)
-
+	dblogs_service.Add(conf.LOGIN_SUCCESS, "USER LOGIN SUCCESS.. "+user.NickName+" ( From : "+fromLogin+" )", "", ipRequest)
 	claim := dbsession_user_service.GetClaimForToken(tokenGet)
 
 	resp := make(map[string]interface{})
@@ -244,8 +254,6 @@ func PostClaimUser(c *gin.Context) {
 		appG.Response(http.StatusOK, e.ERROR_AUTH, sendData)
 		return
 	}
-
-	//fmt.Println("Here")
 	token := strings.TrimPrefix(auth, "Bearer ")
 	if token == auth {
 		sendData.Success = false
@@ -300,19 +308,20 @@ func Postlogout(c *gin.Context) {
 		return
 	}
 
-	logout := false
+	logout := "false"
 	session := dbsession_user_service.FindToToken(token)
 	if session.Active {
 		session.Active = false
 	}
 	result := dbsession_user_service.UpdateOne(session)
 	if result {
-		logout = true
+		logout = "true"
 	}
 
 	dblogs_service.Add(conf.LOGIN_USER_LOGOUT, "LOGOUT USER "+session.IdUser, session.IdUser, ipRequest)
 
-	appG.Response(http.StatusOK, e.SUCCESS, logout)
+	myJsonString := `{"logout":` + logout + `}`
+	appG.Response(http.StatusOK, e.SUCCESS, myJsonString)
 }
 
 // @Summary Post ClaimUser
@@ -332,16 +341,17 @@ func PostCheckStatusSession(c *gin.Context) {
 	auth := c.Request.Header.Get("Authorization")
 
 	if auth == "" {
-		appG.Response(http.StatusOK, e.ERROR_AUTH, valid)
-		return
+		// appG.Response(http.StatusOK, e.ERROR_AUTH, myJsonString)
+		// return
+		valid = false
 	}
 
 	token := strings.TrimPrefix(auth, "Bearer ")
 	if token == auth {
-		appG.Response(http.StatusOK, e.ERROR_AUTH, valid)
-		return
+		// appG.Response(http.StatusOK, e.ERROR_AUTH, myJsonString)
+		// return
+		valid = false
 	}
-
 	valid = true
 	_, err := util.ParseToken(token)
 	if err != nil {
@@ -363,7 +373,6 @@ func PostCheckStatusSession(c *gin.Context) {
 	//update lastTimeOnline
 	dbsession_user_service.UpdateOne(activeToken)
 	appG.Response(http.StatusOK, e.SUCCESS, valid)
-
 }
 
 // @Summary Post Check Password User
@@ -384,7 +393,6 @@ func PostCheckPasswordUser(c *gin.Context) {
 	var valid = false
 	if !CheckBearer(c) {
 		appG.Response(http.StatusNonAuthoritativeInfo, e.ERROR_AUTH, valid)
-
 		return
 	}
 
@@ -409,7 +417,6 @@ func PostCheckPasswordUser(c *gin.Context) {
 	//fmt.Println(userFind)
 	appG.Response(http.StatusOK, e.SUCCESS, valid)
 	//return
-
 }
 
 func CheckBearer(c *gin.Context) bool {
@@ -425,6 +432,63 @@ func CheckBearer(c *gin.Context) bool {
 		return false
 	}
 	return true
+}
+
+// @Summary Post CheckIdDevice
+// @Produce  json
+// @Tags Auth
+// @Param idDevice query string true "idDevice"
+// @Param type query string true "type"
+// @Success 200 {object} app.Response
+// @Failure 400 {object} app.Response
+// @Router /auth/checkIdDevice [post]
+func PostCheckIdDevice(c *gin.Context) {
+
+	appG := app.Gin{C: c}
+	valid := validation.Validation{}
+	sendResponse := false
+
+	ipRequest = c.ClientIP()
+	modelDevice := deviceId{}
+	c.BindJSON(&modelDevice) //get params from Body
+
+	modelUser := deviceId{IdDevice: modelDevice.IdDevice, Type: modelDevice.Type}
+	ok, _ := valid.Valid(&modelUser)
+
+	fmt.Print("HERE" + strconv.FormatBool(ok))
+	fmt.Println(modelUser.Type)
+	fmt.Println(modelUser.IdDevice)
+	if !ok {
+		appG.Response(http.StatusBadRequest, e.INVALID_PARAMS, nil)
+		return
+	}
+
+	if modelUser.IdDevice == "" {
+		appG.Response(http.StatusBadRequest, e.INVALID_PARAMS, nil)
+		return
+	}
+
+	found := dbDevicesSys_service.FindToIdDevice(modelDevice.IdDevice)
+	if found.Key == "" {
+		//is not Device
+		newDevice := authinterfaces.DevicesSys_sys{Key: modelDevice.IdDevice,
+			IdCompany: "", DateAdd: time.Now(), Status: 0, Type: modelDevice.Type,
+			Note: "NUEVO DEVICE BLOCK"}
+		dbDevicesSys_service.Add(newDevice)
+		dblogs_service.Add(conf.SYSTEM_DEVICE_EVENT, "ADD NEW DEVICE BLOCK TYPE==>  "+modelDevice.Type, modelDevice.IdDevice, ipRequest)
+	} else {
+		if found.Status == 1 {
+			sendResponse = true
+		}
+		dblogs_service.Add(conf.SYSTEM_DEVICE_EVENT, "ADD CONTACT TO DEVICE IS => "+modelDevice.Type+" result: "+strconv.FormatBool(sendResponse), modelDevice.IdDevice, ipRequest)
+	}
+
+	// 	//fmt.Println(result)
+	myJsonString := `{"active":` + strconv.FormatBool(sendResponse) + `}`
+	fmt.Println(myJsonString)
+	appG.Response(http.StatusOK, e.SUCCESS, myJsonString)
+	return
+
 }
 
 // // @Summary Get Auth
